add disconnect button

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -18,5 +18,6 @@
     <button id="conn-btn" class="button-39">CONNECT</button>
     <input id="mess" name="mess" id="mess" class="message" />
     <button id="send-mess" class="button-39">SEND MESSAGE</button>
+    <button id="disconn-btn" class="button-39">DISCONNECT</button>
   </body>
 </html>
